<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseImageActivity"
    android:backgroundTint="@color/white">

    <TextView
        android:id="@+id/all_clothes_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:text="@string/all_clothes"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/clothes_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/all_clothes_name">

        <RadioButton
            android:id="@+id/summer_uniform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summer_uniform"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/winter_uniform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/winter_uniform"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/summer_private"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summer_private"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/winter_private"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/winter_private"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/summer_noble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summer_noble"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/winter_noble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/winter_noble"
            android:textColor="@color/black"
            android:textSize="17sp" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clothes_radio_group" />

</androidx.constraintlayout.widget.ConstraintLayout>