<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="80dp"
            app:cardCornerRadius="100dp"
            app:cardElevation="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_face"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            tools:text="@string/name"
            android:textColor="@color/primary"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name">

            <TextView
                android:id="@+id/background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/description_background"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/personality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/description_personality"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="20dp"
                android:padding="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/unit"
                        android:textSize="20sp"
                        android:textColor="@color/primary"
                        android:layout_marginEnd="100dp"
                        android:paddingStart="10dp"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:id="@+id/logo_unit"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        tools:src="@tools:sample/avatars" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/subunit"
                        android:textSize="20sp"
                        android:textColor="@color/primary"
                        android:layout_marginEnd="100dp"
                        android:paddingStart="10dp"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:id="@+id/logo_subunit"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        tools:src="@tools:sample/avatars" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/school"
                        android:textSize="20sp"
                        android:textColor="@color/primary"
                        android:layout_marginEnd="100dp"
                        android:paddingStart="10dp"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/school"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/school_name"
                        android:textSize="15sp"
                        android:textColor="@color/black" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/school_years"
                        android:textSize="20sp"
                        android:textColor="@color/primary"
                        android:layout_marginEnd="100dp"
                        android:paddingStart="10dp"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/school_years"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/school_years"
                        android:textSize="15sp"
                        android:textColor="@color/black" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/birthday"
                        android:textSize="20sp"
                        android:textColor="@color/primary"
                        android:layout_marginEnd="100dp"
                        android:paddingStart="10dp"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/birthday_name"
                        android:textSize="15sp"
                        android:textColor="@color/black" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/astrological"
                        android:textSize="20sp"
                        android:textColor="@color/primary"
                        android:layout_marginEnd="100dp"
                        android:paddingStart="10dp"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/astrological"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/astrological_name"
                        android:textSize="15sp"
                        android:textColor="@color/black" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/blood_type"
                        android:textSize="20sp"
                        android:textColor="@color/primary"
                        android:layout_marginEnd="100dp"
                        android:paddingStart="10dp"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/blood_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/blood_type_name"
                        android:textSize="15sp"
                        android:textColor="@color/black" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/height"
                        android:textSize="20sp"
                        android:textColor="@color/primary"
                        android:layout_marginEnd="100dp"
                        android:paddingStart="10dp"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/height_name"
                        android:textSize="15sp"
                        android:textColor="@color/black" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>